--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.0",
     "datetime-scheduler": "^1.0.3",
+    "dayjs": "^1.11.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
